# rust-sqlx-github-actions-demo

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build-and-test.yml  postgres-demo.yml  test-and-build.yml
.sqlx/: query-4d3dadd55d4328fba55010228eef5d8e58f6485c7b6aa30e5d51809b1326b1fa.json
migrations/: 20231220222145_init.sql
src/: lib.rs  main.rs
tests/: postgres-demo.rs
tests/fixtures/: messages.sql
