[package]
name = "github-actions-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.3", default-features = false, features = [
    "postgres",
    "macros",
    "migrate",
    "runtime-tokio",
] }
tokio = { version = "1.35.1", features = ["macros"] }

[dev-dependencies]
cargo-husky = { version = "1.5.0", features = [
    "run-cargo-check",
    "run-cargo-clippy",
    "run-cargo-fmt",
] }
